--- a/index.html
+++ b/index.html
@@ -117,23 +117,23 @@
 
 				<nav class="listagem">
 					<ul>
-						<li class="pokedev ativo" id="devchu">
+						<li class="pokedev ativo">
 							<img src="src/images/devchu.png" alt="Devchu" />
 							<span>Devchu</span>
 						</li>
-						<li class="pokedev" id="codevee">
+						<li class="pokedev">
 							<img src="src/images/codevee.png" alt="Codevee" />
 							<span>Codevee</span>
 						</li>
-						<li class="pokedev" id="psycoder">
+						<li class="pokedev">
 							<img src="src/images/psycoder.png" alt="Psycoder" />
 							<span>Psycoder</span>
 						</li>
-						<li class="pokedev" id="charmandev">
+						<li class="pokedev">
 							<img src="src/images/charmandev.png" alt="Charmandev" />
 							<span>Charmandev</span>
 						</li>
-						<li class="pokedev" id="scriptle">
+						<li class="pokedev">
 							<img src="src/images/scriptle.png" alt="Scriptle" />
 							<span>Scriptle</span>
 						</li>
